syntax = "proto3";
option go_package = "./proto";

service ImageService {
    rpc Upload(stream UploadRequest) returns(UploadResponse);
    rpc Search(SearchRequest) returns(SearchResponse);
}

message SearchResponse{
    repeated string path = 1;
    uint64 total = 2;
}

message SearchRequest{
    string prompt = 1;
    uint64 limit = 2;
    uint64 offset = 3;
}

message Info{
    string file_name = 1;
}

message UploadResponse{
    string id = 1;
    uint32 size = 2;
}
message UploadRequest{
    oneof data{
        Info info = 1;
        bytes chunk = 2;
    }
}