syntax = "proto3";
option go_package = "./proto";

service ModelService {
    rpc TextEmbedding(TextEmbeddingRequest) returns(TextEmbeddingResponse);
    rpc ImageEmbedding(stream ImageEmbeddingRequest) returns(ImageEmbeddingResponse);
}
message TextEmbeddingResponse{
    repeated float embedding = 1;
}
message ImageEmbeddingResponse{
    repeated float embedding = 1;
}
message TextEmbeddingRequest{
    string text = 1;
}
message ImageEmbeddingRequest{
    bytes chunk = 1;
}